# streamlify-light-reproducer

./: README.md
anchor/: Anchor.toml
anchor/programs/light_nft_reproducer/: Cargo.toml
anchor/programs/light_nft_reproducer/src/: lib.rs
app/: .env.example  .gitignore  next.config.js  package.json
app/src/components/: LogPanel.tsx  MintForm.tsx  NFTPreview.tsx
app/src/lib/: light-accounts.ts  program.ts
app/src/pages/: _app.tsx  index.tsx
app/styles/: globals.css
scripts/: deploy.sh  register-program.ts
